public/css/index.css
.warning {
  border-color: red;
}

.form-signin {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}

.form-control {
  position: relative;
  box-sizing: border-box;
  height: auto;
  padding: 10px;
  font-size: 16px;
}

.jumbotron {
  background: none;
  padding-top: 0px;
  padding-bottom: 0px;
  margin: 0px;
}

.largeScreen{
  display: none;
}

.smallScreen{
  display: block;
  margin-top: 250px;
}

#homePage {
  background-image: url(../images/main-bg.jpg);
  background-size: cover;
  background-position: center center;
  height: 100vh;
}

#clickMeSmall {
  position: relative;
  top: -115px;
  left: -30px;
}

#prospectingSmall {
  position: relative;
  top: -95px;
  left: 7px;
}


/************************************************
              MEDIA QUERIES BELOW  
*************************************************/

@media (min-width: 474px) {
  .largeScreen{
    display: block;
    margin-top: 36vh;
  }

  .largeScreen img {
    width: 500px;
  }

  .smallScreen{display: none;}

  #clickMeLarge {
    position: relative;
    top: -160px;
    left: 140px;
    width: 100px;
  }

  #prospectingLarge {
    position: relative;
    top: -120px;
    left: 130px;
  }

}


@media (min-width: 664px) {
  .largeScreen img {
    width: 600px;
  }

  #clickMeLarge {
    top: -185px;
    left: 190px;
  }

  #prospectingLarge {
    top: -135px;
    left: 178px;
  }
}


@media (min-width: 853px) {
  #clickMeLarge {
    top: 50px;
    left: -415px;
  }

  #prospectingLarge {
    top: -110px;
  }
}

